--- a/react-money-value-calculator/src/App.css
+++ b/react-money-value-calculator/src/App.css
@@ -20,6 +20,7 @@
   border-radius: 7px;
   margin: 0 auto;
   padding: 20px;
+  box-shadow: 2px 2px 2px 2px rgba(21, 60, 190, 0.5);
   margin-top: 20px;
 }
 .header h2 {
@@ -44,6 +45,7 @@ h4 {
   border-radius: 5px;
   margin-top: 30px;
   background-color: rgba(21, 60, 190, 0.2);
+  box-shadow: 2px 2px 2px 2px rgba(21, 60, 190, 0.8);
   display: grid;
   width: 40%;
   grid-template-columns: repeat(2, 1fr);
@@ -54,12 +56,12 @@ h4 {
 
 input {
   display: block;
-  /* font-size: 1.5rem; */
   padding-left: 10px;
 }
 input[type="number"] {
   height: 1.2rem;
   width: 300px;
+  outline: none;
   font-size: 1rem;
   border: 1px solid #fff;
   background-color: rgba(21, 60, 190, 0.2);
@@ -68,6 +70,7 @@ input[type="number"] {
 .input {
   padding: 3px;
   background-color: rgba(21, 60, 190, 0.1);
+  box-shadow: 1px 2px 1px 1px rgba(21, 60, 190, 0.6);
   border-radius: 8px;
   width: 100%;
   display: block;
@@ -86,6 +89,7 @@ input[type="number"] {
 }
 .display-result {
   background-color: rgba(0, 0, 0, 0.04);
+  box-shadow: 2px 2px 2px 2px rgba(21, 60, 190, 0.8);
   border: 1px solid #fff;
   border-radius: 5px;
   padding: 3px 6px;
