fixed styling bug

--- a/money-value-calculator/style.css
+++ b/money-value-calculator/style.css
@@ -21,6 +21,7 @@ h3 {
   width: 40%;
   border-radius: 10px;
   margin: 0 auto;
+  margin-top: 1rem;
   font-family: "Poppins", sans-serif;
   padding: 25px;
   background: rgba(21, 60, 190, 0.897);
